--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,6 @@ enableRobotsTXT = true
 [params]
   favicon = ""
   description = "Racordon TV"
-  background_color_class = "bg-near-white"
+  background_color_class = "bg-black"
   featured_image = "/images/header.jpg"
   recent_posts_number = 3
