--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,7 @@ enableRobotsTXT = true
   filename = "sitemap.xml"
 
 [params]
+  AuthorName = "Yvan Racordon"
   favicon = ""
   description = "Racordon TV"
   background_color_class = "bg-black"
