--- a/config.toml
+++ b/config.toml
@@ -21,3 +21,4 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/images/header.jpg"
   recent_posts_number = 3
+  toc = true
