--- a/config.toml
+++ b/config.toml
@@ -21,4 +21,14 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/images/header.jpg"
   recent_posts_number = 3
+  disableReadingTime = false
+  sidebarMenuEnabled = true
   sidebarHeader = "Sidebar Header"
+  sidebarText = """Here's a [link to google](https://www.google.com)
+  </br>
+  Second line
+  </br>
+  Third line
+  This line has two spaces in the end to create a new line using markdown
+  Forth line
+  """
