--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
 [params]
   AuthorName = "Yvan Racordon"
   favicon = ""
-  description = "Racordon TV"
+  description = "Rac-TV"
   background_color_class = "bg-black"
   featured_image = "/images/header.jpg"
   recent_posts_number = 2
