--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ enableRobotsTXT = true
   AuthorName = "Yvan Racordon"
   favicon = ""
   description = "Rac-TV"
-  background_color_class = "bg-lightest-blue"
+  background_color_class = "bg-light-blue"
   featured_image = "/images/header.jpg"
   recent_posts_number = 2
   disableReadingTime = false
